--- a/CvPlaybround/CvPlaybround.csproj
+++ b/CvPlaybround/CvPlaybround.csproj
@@ -1,9 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>net8.0-ios</TargetFramework>
+        <TargetFrameworks>net8.0-ios;net8.0-maccatalyst</TargetFrameworks>
         <OutputType>Exe</OutputType>
         <Nullable>enable</Nullable>
         <ImplicitUsings>true</ImplicitUsings>
-        <SupportedOSPlatformVersion>13.0</SupportedOSPlatformVersion>
+<!--        <SupportedOSPlatformVersion>13.0</SupportedOSPlatformVersion>-->
     </PropertyGroup>
 </Project>
